# test_schedule

./: .env.example  .gitignore  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  license.txt  package-lock.json  package.json  pyproject.toml  server.ts
.github/workflows/: copy-on-pr.yml  mirror-source.yml  validate.yml
.helper/: 01-update.bat  02-full-update.bat
deploy/: .env.example  apps.json  build.ps1  compose.yaml  start.ps1  stop.ps1
docs/plans/: 2026-03-01-schichtplaner-design.md
messages/: de.json  en.json  ru.json
prisma/: schema.prisma  seed.ts
prisma/migrations/20260719010000_excel_weekly_grid/: migration.sql
prisma/migrations/20260719023000_day_note_statuses/: migration.sql
prisma/migrations/20260719043000_employee_patronymic/: migration.sql
prisma/migrations/20260719050000_schedule_day_offs/: migration.sql
prisma/migrations/20260719050000_shift_pool_management/: migration.sql
prisma/migrations/20260719060000_overtime_before_after/: migration.sql
prisma/migrations/20260719061000_overtime_half_hour/: migration.sql
scripts/: localize-existing-data.ts  normalize-russian-ui.mjs
scripts/migration/: import-care-cell-statuses.ts  import-care-day-notes.ts  import-care-schedule.ts  sync-shift-pool-snapshots.ts
src/: middleware.ts  proxy.ts
src/app/: error.tsx  globals.css  layout.tsx  outline-compat.css  page.tsx
src/app/(dashboard)/: layout.tsx
src/components/ai/: chat-messages.tsx  chat-widget.tsx  forecast-chart.tsx
src/components/ui/: badge.tsx  (+7 more)
src/i18n/: request.ts  routing.ts
src/lib/: auth.ts  db.ts
src/types/: next-intl.d.ts  schedule.ts
workforce_portal/: __init__.py  api.py  hooks.py  install.py  modules.txt  permissions.py
(+142 files in other folders)
