[project]
name = "workforce_portal"
authors = [
    { name = "Workforce Portal", email = "dev@localhost" }
]
description = "Employee scheduling, leave visibility, and change requests for Frappe HR"
requires-python = ">=3.10,<3.14"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[project.urls]
Repository = "https://github.com/ivan-s-2001/test_schedule"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
erpnext = ">=15.0.0,<16.0.0"
hrms = ">=15.0.0,<16.0.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
